[gd_scene load_steps=4 format=3 uid="uid://db06d51ppipo0"]

[ext_resource type="Texture2D" uid="uid://b4l73tkl2hxw2" path="res://Assets/Placeholders/DALLÂ·E 2024-01-13 15.56.47 - Drawing of a party with people drinking, dancing, style of a marker doodle.png" id="1_m00a6"]
[ext_resource type="PackedScene" uid="uid://d0o5d7ff6dc1j" path="res://Scenes/Garfield.tscn" id="2_vswap"]
[ext_resource type="Script" path="res://Scenes/GameManager.gd" id="3_rm8d4"]

[node name="Test" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_rm8d4")

[node name="Control" type="Control" parent="GameManager"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="GameManager/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -59.0
offset_right = 1283.0
offset_bottom = 1079.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_m00a6")

[node name="UI" type="Control" parent="GameManager"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ChoicesPanelContainer" type="PanelContainer" parent="GameManager/UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 362.0
offset_top = 476.0
offset_right = 1214.0
offset_bottom = 656.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="GameManager/UI/ChoicesPanelContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="GameManager/UI/ChoicesPanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="ButtonsContainer" type="VBoxContainer" parent="GameManager/UI/ChoicesPanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Spacer2" type="Control" parent="GameManager/UI/ChoicesPanelContainer/HBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Button" type="Button" parent="GameManager/UI/ChoicesPanelContainer/HBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button2" type="Button" parent="GameManager/UI/ChoicesPanelContainer/HBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button3" type="Button" parent="GameManager/UI/ChoicesPanelContainer/HBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button4" type="Button" parent="GameManager/UI/ChoicesPanelContainer/HBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer3" type="Control" parent="GameManager/UI/ChoicesPanelContainer/HBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Spacer2" type="Control" parent="GameManager/UI/ChoicesPanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="DialoguePanelContainer" type="PanelContainer" parent="GameManager/UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialoguePanel" type="Label" parent="GameManager/UI/DialoguePanelContainer"]
layout_mode = 2

[node name="Garfield" parent="GameManager" instance=ExtResource("2_vswap")]
position = Vector2(66, 81)
